fix #4749 Discussion thread titles invisible and staff access denied

--- a/src/static/admin/css/admin.css
+++ b/src/static/admin/css/admin.css
@@ -531,7 +531,8 @@ th {
     color: white;
 }
 
-.thread-dark a {
+.thread-dark a,
+.thread-dark h2 a {
     color: white;
 }
 
